overflow fixe

--- a/scss/application_max425.scss
+++ b/scss/application_max425.scss
@@ -104,7 +104,6 @@ html,body,{
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
 }
 
 .wrapper {
